<resources>
    <string name="app_name">Help Me</string>

    <!--Signup Activity -->
    <string name="invalid_email">invalid email!</string>
    <string name="invalid_password">invalid password!</string>
    <string name="registration_error">An unexpected error occurred! please check your internet</string>
    <string name="signup_button_label">Sign up</string>
    <string name="signup_button_label_signing_up">signing up…</string>

    <!--Login Activity -->
    <string name="login_auth_failed">no such user exists!</string>
    <string name="login_button_label">Login</string>
    <string name="login_button_label_logging_in">logging in…</string>

    <!--Signin/Singup Activity -->
    <string name="menu">Menu</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="post_for_help">Post For Help</string>
    <string name="help_feed">Help Feed</string>
    <string name="monitor_user">Monitor User</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up_here">Don’t have an account? Sign up here.</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here.</string>
    <string name="create_an_account">Create an Account</string>

    <string name="add_icon_Alt">add</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_phone_number">invalid phone number</string>
    <string name="invalid_username">invalid username</string>
    <string name="emergencyContactUsernameHint_TextView">Username are atleast 4 letters</string>
    <string name="emergencyContactPhoneHint_TextView">A valid 11 digit phone number</string>
    <string name="emergencyContactDialogTitle_TextView">New emergency contact</string>
    <string name="invalid_emergency_contact">Invalid name and/or phone number!</string>
    <string name="hard_logout">Sorry, you have to login again!</string>
    <string name="name">Name</string>
    <string name="failed_to_connect">An unexpected error occurred! please check your internet.</string>
    <string name="delete_icon_Alt">delete</string>
    <string name="emergencyContactName_TextView">Name</string>
    <string name="emergencyContactPhone_TextView">+880 12345678910</string>
    <string name="emergencyContactsEmpty_TextView">No emergency contacts found.</string>

    <!--Setup Profile Activity -->
    <string name="date_of_birth">Date of Birth (dd/mm/yyyy)</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="invalid_date_of_birth">date format: dd/mm/yyyy</string>
    <string name="invalid_address">Invalid address</string>
    <string name="saving">Saving…</string>
    <string name="loading">Loading…</string>
    <string name="success">User info loaded</string>

    <!--Help Post Activity -->
    <string name="helpPostContent_EditText_hint">Write post description…</string>
    <string name="helpPost_capturedPhoto_ImageView_Alt">taken_image</string>
    <string name="helpPost_takePhoto_Button_label">Take Photo</string>
    <string name="helpPost_Address_EditText_hint">address (Optional)</string>
    <string name="helpPost_PickLocation_Button_label">Fetch Location</string>
    <string name="helpPost_makePublic_CheckBox_label">Make post public</string>
    <string name="helpPost_Post_Button_label">Post</string>
    <string name="sign_up_title">Sign up</string>
    <string name="login_title">Login</string>
    <string name="menu_title">Menu</string>
    <string name="emergency_contacts_title">Emergency Contacts</string>
    <string name="setup_profile_title">Setup Profile</string>
    <string name="help_post_title">Help Post</string>
    <string name="no_default_camera_app_found">No default camera app found</string>
    <string name="fetching_location">Fetching Location…</string>
    <string name="location_fetched">Location Fetched!</string>
    <string name="location_fetch_failed">Location fetch failed, please try again</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_settings_explanation">We need Location, Wifi and Bluetooth enabled to get your accurate location</string>
    <string name="ok">OK</string>
    <string name="location_permission">Location Permission</string>
    <string name="location_permission_permanantely_denied_explanation">Please allow location from for the app from your device Settings.</string>
    <string name="location_permission_explanation">Location permission is required to fetch your current location, permission MUST be provided!</string>
    <string name="invalid_description">invalid description</string>
    <string name="location_is_innaccurate">Location is innacurate. Do you want retry fetching location?</string>
    <string name="retry">Retry</string>
    <string name="ignore_and_send">ignore</string>
    <string name="no_location_error">No location fethced!</string>
    <string name="image_upload_failed">Failed to upload the photo, try again.</string>
    <string name="posting">Posting…</string>
    <string name="posted">Sent!</string>
    <string name="sms_permission">SMS Permission</string>
    <string name="sms_permission_permanantely_denied_explanation">Please allow SMS permission from your device settings, which is necessary to reach your emergency contacts.</string>
    <string name="sms_permission_explanation">We need SMS permission to reach your emergency contacts. Sorry for the interruption</string>
    <string name="helpPost_phoneNumber_editTextHint">Your 11 digit phone number</string>
    <string name="failed_to_send_sms">Failed to send SMS! check your SIM network/balance</string>
    <string name="failed_to_send_sms_but_uploaded_to_database">Failed to send SMS! but post saved to server.</string>
    <string name="phoneNumber_singleHelpPost_TextView_placeholder">+88012345678910</string>
    <string name="address_singleHelpPost_TextView_placeholder">some, provided, address</string>
    <string name="time_singleHelpPost_TextView_placeholder">12/07/98 12:24:47</string>
    <string name="content_singleHelpPost_TextView_placeholder">The content containing brief description provided by the person who posted this help post</string>
    <string name="contact_singleHelpPost_Button_label">Contact</string>
    <string name="showLocation_singleHelpPost_Button_label">Show Location</string>
    <string name="helpPost_photo_alt">post_photo</string>
    <string name="searching_singleHelpPost_TextView">Loading please wait…</string>
    <string name="failed_to_load_post">Failed to load post. Tap to try again.</string>
    <string name="no_address">No Address Provided</string>
    <string name="helpFeed_empty_TextView">Nothing found.</string>

    <!--Splash Screen-->
    <string name="subtitle">Stand against the social violence around you</string>
    <string name="appTitle">Help Me App</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>

    <!--Settings Activity -->
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="location_tracking">Location Tracking</string>
    <string name="danger_mode">Danger Mode</string>
    <string name="receive_nearby_distress_calls">Receive Nearby Distress Calls</string>
    <string name="logout_from_account">Logout from Account</string>
    <string name="no_internet">No internet!</string>
    <string name="please_enable_internet_to_continue">Please enable internet connection to continue</string>
    <string name="internet_connection_lost">Internet connection lost!</string>


</resources>