<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/emergencyContactDialogTitle_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="@font/segoebold"
        android:gravity="center"
        android:text="@string/emergencyContactDialogTitle_TextView"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emergencyContactNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_user_logo"
            android:drawablePadding="5dp"
            android:fontFamily="@font/segoeui"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:paddingStart="18dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/emergencyContactUsernameHint_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/segoebold"
            android:text="@string/emergencyContactUsernameHint_TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emergencyContactPhoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_action_phone"
            android:drawablePadding="5dp"
            android:fontFamily="@font/segoeui"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions|phone"
            android:paddingStart="18dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/emergencyContactPhoneHint_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/segoebold"
            android:text="@string/emergencyContactPhoneHint_TextView" />
    </LinearLayout>

</LinearLayout>