<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/custom_ec_itemview_background"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/address_helpPostItemView_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:drawablePadding="6dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/address_singleHelpPost_TextView_placeholder"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/time_helpPostItemView_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/time_singleHelpPost_TextView_placeholder"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_calendar" />

    <ImageView
        android:id="@+id/photo_helpPostItemView_ImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/helpPost_photo_alt"
        android:foregroundGravity="center"
        android:visibility="gone"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/content_helpPostItemView_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/segoeui"
        android:padding="4dp"
        android:text="@string/content_singleHelpPost_TextView_placeholder"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/showLocation_helpPostItemView_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/custom_button2"
        android:drawableStart="@drawable/ic_location"
        android:fontFamily="@font/segoebold"
        android:gravity="center"
        android:onClick="showLocationClick"
        android:padding="8dp"
        android:text="@string/showLocation_singleHelpPost_Button_label" />

</LinearLayout>