<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleHelpPostActivity">

    <ScrollView
        android:id="@+id/singleHelpPost_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phoneNumber_singleHelpPost_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/segoeui"
                android:text="@string/phoneNumber_singleHelpPost_TextView_placeholder"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_phone_icon" />

            <TextView
                android:id="@+id/address_singleHelpPost_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:drawablePadding="6dp"
                android:fontFamily="@font/segoeui"
                android:text="@string/address_singleHelpPost_TextView_placeholder"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/time_singleHelpPost_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:drawablePadding="8dp"
                android:fontFamily="@font/segoeui"
                android:text="@string/time_singleHelpPost_TextView_placeholder"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/content_singleHelpPost_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/segoeui"
                android:padding="4dp"
                android:text="@string/content_singleHelpPost_TextView_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/photo_singleHelpPost_ImageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/helpPost_photo_alt"
                android:foregroundGravity="center"
                android:visibility="gone"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="100"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/contact_singleHelpPost_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="50"
                    android:background="@drawable/custom_button2"
                    android:drawableStart="@drawable/ic_entypo_old_phone"
                    android:fontFamily="@font/segoebold"
                    android:onClick="contactClick"
                    android:padding="20dp"
                    android:text="@string/contact_singleHelpPost_Button_label"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/showLocation_singleHelpPost_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="50"
                    android:background="@drawable/custom_button2"
                    android:drawableStart="@drawable/ic_location"
                    android:fontFamily="@font/segoebold"
                    android:onClick="showLocationClick"
                    android:padding="16.5dp"
                    android:text="@string/showLocation_singleHelpPost_Button_label" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/searching_singleHelpPost_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/segoeui"
        android:text="@string/searching_singleHelpPost_TextView"
        android:textSize="18sp" />

</RelativeLayout>