<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_vector_header"
        android:elevation="-.1dp"/>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_applogo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeui"
            android:layout_marginStart="10dp"
            android:textSize="25sp"
            android:textColor="#FFF"
            android:text="@string/setup_profile"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userinputs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:elevation="1.5dp"
        android:layout_below="@id/header"
        android:background="@drawable/menu_button">

        <EditText
            android:id="@+id/username_setupProfile_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_user_logo"
            android:drawablePadding="5dp"
            android:fontFamily="@font/segoeui"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textNoSuggestions"
            android:paddingStart="18dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dateOfBirth_setupProfile_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="5dp"
            android:fontFamily="@font/segoeui"
            android:hint="@string/date_of_birth"
            android:importantForAutofill="no"
            android:inputType="date"
            android:paddingStart="18dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/address_setupProfile_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="5dp"
            android:fontFamily="@font/segoeui"
            android:hint="@string/address"
            android:importantForAutofill="no"
            android:inputType="text|textNoSuggestions"
            android:paddingStart="18dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phoneNumber_setupProfile_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_phone_icon"
            android:drawablePadding="3.5dp"
            android:fontFamily="@font/segoeui"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="phone|textNoSuggestions"
            android:paddingStart="18dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_setupProfile_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/segoebold"
            android:onClick="saveProfileClick"
            android:padding="20dp"
            android:text="@string/save"
            android:textColor="#fff"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>