<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="95"
        android:orientation="vertical">

        <TextView
            android:id="@+id/emergencyContactName_itemView__TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/segoebold"
            android:padding="4dp"
            android:text="@string/emergencyContactName_TextView"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_user_logo" />

        <TextView
            android:id="@+id/emergencyContactPhone_itemView__TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/segoebold"
            android:padding="4dp"
            android:text="@string/emergencyContactPhone_TextView"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_action_phone" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/emergencyContactDelete_itemView_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:background="@color/white"
        android:foregroundGravity="center"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_action_delete"
        android:contentDescription="@string/delete_icon_Alt" />
</LinearLayout>